--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -15,6 +15,9 @@ a {
   a:hover {
     text-decoration: underline; }
 
+canvas {
+  width: 500px; }
+
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
@@ -202,6 +205,10 @@ a {
   margin: 1rem 0;
   background-color: #eff0f1;
   border: 0; }
+
+.main-content {
+  text-align: center;
+}
 
 @media screen and (min-width: 64em) {
   .main-content {
