--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -114,15 +114,13 @@ canvas {
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
   margin-top: 2rem;
   margin-bottom: 1rem;
-  font-weight: normal;
-  color: #159957; }
+  font-weight: normal; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
   padding: 2px 4px;
   font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
   font-size: 0.9rem;
-  color: #383e41;
   background-color: #f3f6fa;
   border-radius: 0.3rem; }
 .main-content pre {
@@ -130,7 +128,6 @@ canvas {
   margin-top: 0;
   margin-bottom: 1rem;
   font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
-  color: #567482;
   word-wrap: normal;
   background-color: #f3f6fa;
   border: solid 1px #dce6f0;
@@ -139,7 +136,6 @@ canvas {
     padding: 0;
     margin: 0;
     font-size: 0.9rem;
-    color: #567482;
     word-break: normal;
     white-space: pre;
     background: transparent;
@@ -172,7 +168,6 @@ canvas {
 .main-content blockquote {
   padding: 0 1rem;
   margin-left: 0;
-  color: #819198;
   border-left: 0.3rem solid #dce6f0; }
   .main-content blockquote > :first-child {
     margin-top: 0; }
@@ -235,9 +230,6 @@ canvas {
 .site-footer-owner {
   display: block;
   font-weight: bold; }
-
-.site-footer-credits {
-  color: #819198; }
 
 @media screen and (min-width: 64em) {
   .site-footer {
