--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -246,7 +246,9 @@ a {
 
 .chart {
     padding: 10px;
-    margin-bottom: 10px;
+    margin: 20px 0;
+    border: 1px solid #eee;
+    border-radius: 8px;
 }
 
 .chart-header .btn {
